Fix distorted images

--- a/src/Project.scss
+++ b/src/Project.scss
@@ -437,6 +437,7 @@
       right: 66%;
       img {
         width: 60%;
+        height: auto;
       }
     }
     .p1_6_1_text {
@@ -447,6 +448,7 @@
       text-align: right;
       img {
         width: 80%;
+        height: auto;
       }
     }
 
